# api-docs.yaml
@@ -595,9 +595,10 @@ paths:
       tags:
       - Api сервиса аккаунта
       summary: Получение данных акаунта
-      description: "Получение данных акаунта текущего пользователя. <br>Для всех м\
-        етодов сервиса  Accaunt Вам надо реализовать интерфейс контроллера, контро\
-        ллер, и сам сервис. <br> Общая работа подразумевает:<br>контроллер принима\
+      description: "Получение данных акаунта текущего пользователя. <br> 
+        Принцип реализации сервиса Account
+        Вам надо реализовать интерфейс контроллера, контроллер, и сам сервис. 
+        <br> Общая работа подразумевает:<br>контроллер принима\
         ет в теле запроса параметры и передает их в сервис,<br>Сервис выполняет ло\
         гику и возвращает в контроллер DTO<br>Контроллер оборачивает ответ сервиса\
         \ в ResponseEntity<br>Для работы со временем используйте тип ZonaDateTime<br>д\
@@ -2499,18 +2500,6 @@ paths:
         "401":
           description: Авторизация не пройдена. Для использования метода необходимо
             авторизоваться.
-          content:
-            '*/*':
-              schema:
-                type: string
-  /api/v1/account/test:
-    get:
-      tags:
-      - Api сервиса аккаунта
-      operationId: test_1
-      responses:
-        "200":
-          description: OK
           content:
             '*/*':
               schema:
